changes to the toolbar made

--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -14,7 +14,6 @@ body {
   
   footer {
     text-align: center;
-    position: fixed;
     bottom: 0;
     width: 100%;
   }
@@ -31,7 +30,7 @@ body {
   }
 
   /* .menuButton{
-    border:#dbdbdba8 2px solid 
+    border:#66cef773 2px solid 
     !important;
-  } */
-  
+  }
+   */
