--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -1,36 +1,30 @@
 /* src/styles/globalStyles.css */
 
-body {
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff; /* Consider using a theme color if appropriate */
-    color: #000000; /* General text color */
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  }
-  
-  h1, h2, h3, h4, h5, h6 {
-    color: #000000; /* Ensure this matches the theme's primary color */
-  }
-  
-  footer {
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-  }
-  
-  @media (max-width: 600px) {
-    .MuiTypography-h6 {
-      font-size: 1.25rem;
-    }
-  
-    .MuiButton-root {
-      font-size: 0.875rem;
-      
-    }
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #ffffff;
+  color: #000000;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #000000;
+}
+
+footer {
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .MuiTypography-h6 {
+    font-size: 1.25rem;
   }
 
-  /* .menuButton{
-    border:#66cef773 2px solid 
-    !important;
+  .MuiButton-root {
+    font-size: 0.875rem;
   }
-   */
+}
